Closed Bug 391526 Opened 17 years ago Closed 17 years ago

warning cleanup patch for places on Intel OSX and GCC 4

Categories

(Firefox :: Bookmarks & History, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

References

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
Fixes most of the compiler warnings for Places on Intel OSX GCC 4.
Attachment #275969 - Flags: review?(sspitzer)
Attachment #275969 - Flags: review?(sspitzer) → review+
Attachment #275969 - Flags: approval1.9?
Comment on attachment 275969 [details] [diff] [review]
fix v1.0

you don't need approval for front-end patches.
Attachment #275969 - Flags: approval1.9?
landed on trunk
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".

In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body   contains   places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.

Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.

Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: