fix osx/gcc4 warnings in places. b=391526 r=sspitzer